fixed spacings in carousels

--- a/src/stylesheets/details_page.css
+++ b/src/stylesheets/details_page.css
@@ -84,7 +84,7 @@
   }
 
   .swiper-outer-div {
-    margin-right: -65px;
+    margin-right: -70px;
   }
 
   .testimonial-swiper-main {
